--- a/View/UserView/ChatPageView.xaml
+++ b/View/UserView/ChatPageView.xaml
@@ -3,6 +3,7 @@
     x:Class="MAUIRecipeApp.View.UserView.ChatPageView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:dto="clr-namespace:MAUIRecipeApp.DTO"
     xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
     xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
     xmlns:models="clr-namespace:MAUIRecipeApp.Models"
@@ -11,20 +12,57 @@
     Title=""
     x:DataType="viewmodel:ChatPageViewModel"
     Background="{StaticResource WhiteText}">
-    <VerticalStackLayout>
+    <VerticalStackLayout Margin="8,16,16,0" Spacing="4">
         <Label
+            FontSize="35"
             HorizontalOptions="Center"
-            Text="Welcome to .NET MAUI!"
+            Text="Chat bot"
+            TextColor="{StaticResource Primary}"
             VerticalOptions="Center" />
+        <Label
+            FontSize="18"
+            HorizontalTextAlignment="Center"
+            Text="Enter your question and our chatbot will answer"
+            TextColor="{StaticResource PrimaryDarkText}" />
+        <Border HeightRequest="450" StrokeShape="RoundRectangle 20">
+            <ScrollView>
+                <CollectionView ItemsSource="{Binding ChatHistory}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <VerticalStackLayout
+                                Padding="5"
+                                BackgroundColor="Beige"
+                                Opacity="1">
+                                <Border
+                                    Padding="10"
+                                    x:DataType="dto:ChatMessage"
+                                    BackgroundColor="{Binding IsUserMessage, Converter={StaticResource BoolToColorConverter}}"
+                                    HorizontalOptions="{Binding IsUserMessage, Converter={StaticResource BoolToAlignmentConverter}}"
+                                    Stroke="Transparent"
+                                    StrokeShape="RoundRectangle 20">
+                                    <Label
+                                        x:DataType="dto:ChatMessage"
+                                        Text="{Binding Text}"
+                                        TextColor="White"
+                                        VerticalOptions="Center" />
+                                </Border>
+
+                            </VerticalStackLayout>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+            </ScrollView>
+        </Border>
         <material:EditorField
             Title="Chat"
             FontSize="18"
             Text="{Binding Message}"
             TextColor="{StaticResource PrimaryDarkText}" />
-        <Label
+        <!--<Label
             FontSize="18"
             Text="{Binding Answer}"
-            TextColor="{StaticResource PrimaryDarkText}" />
+            TextColor="{StaticResource PrimaryDarkText}" />-->
         <Button
             BackgroundColor="AntiqueWhite"
             Command="{Binding GetRecommendationCommand}"
