--- a/View/UserView/HomePageView.xaml
+++ b/View/UserView/HomePageView.xaml
@@ -72,28 +72,41 @@
                 <Label
                     FontAttributes="Bold"
                     FontSize="20"
-                    Text="Featured Food"
+                    Text="Food Base On Your Health"
                     TextColor="{StaticResource PrimaryDarkText}" />
-                <ScrollView Orientation="Horizontal">
-                    <HorizontalStackLayout Spacing="8">
-                        <Button
-                            BackgroundColor="{StaticResource Primary}"
-                            HeightRequest="150"
-                            WidthRequest="200" />
-                        <Button
-                            BackgroundColor="{StaticResource Primary}"
-                            HeightRequest="150"
-                            WidthRequest="200" />
-                        <Button
-                            BackgroundColor="{StaticResource Primary}"
-                            HeightRequest="150"
-                            WidthRequest="200" />
-                        <Button
-                            BackgroundColor="{StaticResource Primary}"
-                            HeightRequest="150"
-                            WidthRequest="200" />
-                    </HorizontalStackLayout>
-                </ScrollView>
+                <CollectionView
+                    HeightRequest="150"
+                    ItemsLayout="HorizontalGrid,1 "
+                    ItemsSource="{Binding SuggestedFoodRecipes}">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate x:DataType="models:FoodRecipe">
+                            <Grid Padding="8" Background="{StaticResource Primary}">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="125" />
+                                </Grid.RowDefinitions>
+
+
+                                <ImageButton
+                                    Grid.Row="0"
+                                    Aspect="Fill"
+                                    Command="{Binding Path=FoodDetailCommand, Source={RelativeSource AncestorType={x:Type viewmodel:HomePageViewModel}}}"
+                                    CommandParameter="{Binding Frid}"
+                                    CornerRadius="20"
+                                    Source="{Binding ImgUrl}" />
+
+
+
+                                <Label
+                                    FontSize="18"
+                                    Text="{Binding RecipeName}"
+                                    TextColor="{StaticResource WhiteText}"
+                                    VerticalTextAlignment="End" />
+
+                            </Grid>
+
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
 
             </VerticalStackLayout>
 
