--- a/View/UserView/SubmitNewRecipeView.xaml
+++ b/View/UserView/SubmitNewRecipeView.xaml
@@ -3,14 +3,19 @@
     x:Class="MAUIRecipeApp.View.UserView.SubmitNewRecipeView"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:MAUIRecipeApp.View.UserView"
-    Title="Submit New Recipe">
+    xmlns:fa="clr-namespace:UraniumUI.Icons.FontAwesome;assembly=UraniumUI.Icons.FontAwesome"
+    xmlns:m="clr-namespace:UraniumUI.Icons.MaterialSymbols;assembly=UraniumUI.Icons.MaterialSymbols"
+    xmlns:material="http://schemas.enisn-projects.io/dotnet/maui/uraniumui/material"
+    xmlns:models="clr-namespace:MAUIRecipeApp.Models"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    xmlns:viewmodel="clr-namespace:MAUIRecipeApp.ViewModel.UserView"
+    Title="Submit New Recipe"
+    x:DataType="viewmodel:SubmitNewRecipeViewModel">
 
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <local:AmountUnitConverter x:Key="AmountUnitConverter" />
-        </ResourceDictionary>
-    </ContentPage.Resources>
+    <!-- ViewModel Binding -->
+    <ContentPage.BindingContext>
+        <viewmodel:SubmitNewRecipeViewModel />
+    </ContentPage.BindingContext>
 
     <ScrollView>
         <VerticalStackLayout Padding="20" Spacing="15">
@@ -23,90 +28,96 @@
                    FontSize="14"
                    TextColor="Gray"
                    HorizontalOptions="Center" />
+            <Label Text="Step 1/2" HorizontalOptions="Center" />
 
             <!-- Recipe Name -->
             <Label Text="Name" />
-            <Entry x:Name="NameEntry" Placeholder="Enter the name of the dish" />
+            <Entry Text="{Binding RecipeName}" Placeholder="Enter the name of the dish" />
 
             <!-- Calories -->
             <Label Text="Calories" />
-            <Entry x:Name="CaloriesEntry" Placeholder="Enter calorie count" Keyboard="Numeric" />
+            <Entry Text="{Binding Calories}" Placeholder="Enter calorie count" Keyboard="Numeric" />
 
             <!-- Cooking Time -->
             <Label Text="Cooking Time (minutes)" />
-            <Entry x:Name="CookingTimeEntry" Placeholder="Enter cooking time" Keyboard="Numeric" />
+            <Entry Text="{Binding CookingTime}" Placeholder="Enter cooking time" Keyboard="Numeric" />
 
             <!-- Difficulty Slider -->
             <Label Text="Difficulty" />
-            <Slider 
-    x:Name="DifficultySlider" 
-    Minimum="0" 
-    Maximum="2" 
-    Value="1" 
-    ValueChanged="DifficultySlider_ValueChanged" />
+            <Slider x:Name="DifficultySlider"
+                    Minimum="0" 
+                    Maximum="2" 
+                    Value="{Binding Difficulty, Mode=TwoWay}" />
             <Grid ColumnSpacing="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-
-                <!-- Labels for Difficulty -->
-                <Label Text="Easy" Grid.Column="0" HorizontalOptions="Start" VerticalOptions="Center" />
-                <Label Text="Medium" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" />
-                <Label Text="Hard" Grid.Column="2" HorizontalOptions="End" VerticalOptions="Center" />
+                <Label Text="Easy" Grid.Column="0" HorizontalOptions="Start" />
+                <Label Text="Medium" Grid.Column="1" HorizontalOptions="Center" />
+                <Label Text="Hard" Grid.Column="2" HorizontalOptions="End" />
             </Grid>
 
+            <!-- Portion -->
+            <Label Text="Portion" />
+            <Entry Text="{Binding Portion}" Placeholder="Enter the number of portions" Keyboard="Numeric" />
 
+            <!-- Food Type -->
+            <Label Text="Food Type" />
+            <Picker ItemsSource="{Binding FoodRecipeTypes}" 
+                    ItemDisplayBinding="{Binding FoodTypeName}" 
+                    SelectedItem="{Binding SelectedFoodType}" />
 
-            <!-- Ingredients Section -->
-            <Label Text="Ingredients" />
-            <Grid Padding="5">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-                <Entry x:Name="IngredientNameEntry" Placeholder="Ingredient name" Grid.Column="0" />
-                <Entry x:Name="IngredientAmountEntry" Placeholder="Amount" Grid.Column="1" WidthRequest="100" />
-                <Button Text="Add" Grid.Column="2" Clicked="OnAddIngredient" />
-            </Grid>
-            <CollectionView x:Name="IngredientsList" ItemsSource="{Binding Ingredients}">
+            <!-- Ingredients Picker -->
+            <Label Text="Select Ingredient" />
+            <HorizontalStackLayout Spacing="10">
+                <Picker ItemsSource="{Binding Ingredients}"
+                        ItemDisplayBinding="{Binding IngredientName}"
+                        SelectedItem="{Binding SelectedIngredient}" />
+                <Entry Text="{Binding IngredientQuantity, Mode=TwoWay}" 
+                       Placeholder="Enter the quantity" 
+                       Keyboard="Numeric" />
+            </HorizontalStackLayout>
+            <Button Text="Add Ingredient"
+                    Command="{Binding AddIngredientToSelectedListCommand}" />
+
+            <!-- Display Selected Ingredients -->
+            <Label Text="Selected Ingredients" FontAttributes="Bold" />
+            <CollectionView ItemsSource="{Binding IngredientsWithNames}">
                 <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Padding="5">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <Label Text="{Binding Name}" Grid.Column="0" />
-                            <Label Text="{Binding Amount}" Grid.Column="1" />
-                            <Button Text="Remove" Grid.Column="3" Clicked="OnRemoveIngredient" />
-                        </Grid>
+                    <DataTemplate x:DataType="models:IngredientInfos">
+                        <HorizontalStackLayout Spacing="10">
+                            <Label Text="{Binding Name}" />
+                            <Label Text="{Binding Quantity}" />
+                            <Button Text="Remove"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:SubmitNewRecipeViewModel}}, Path=RemoveIngredientCommand}"
+                                    CommandParameter="{Binding .}" />
+                        </HorizontalStackLayout>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-            <!-- Health Benefits -->
-            <Label Text="Health Benefits" />
-            <Editor x:Name="HealthBenefitsEditor" Placeholder="Describe the health benefits" />
+            <!-- Image URL -->
+            <Label Text="Image URL" />
+            <Entry Text="{Binding ImageUrl}" Placeholder="Enter the URL of the image" />
 
-            <!-- Food Type -->
-            <Label Text="Food Type" />
-            <Picker x:Name="FoodTypePicker">
-                <Picker.ItemsSource>
-                    <x:Array Type="{x:Type x:String}">
-                        <x:String>Breakfast</x:String>
-                        <x:String>Lunch</x:String>
-                        <x:String>Dinner</x:String>
-                        <x:String>Snack</x:String>
-                    </x:Array>
-                </Picker.ItemsSource>
-            </Picker>
+            <!-- Video URL -->
+            <Label Text="Video URL" />
+            <Entry Text="{Binding VideoUrl}" Placeholder="Enter the URL of the video" />
 
             <!-- Submit Button -->
-            <Button Text="Submit Recipe" BackgroundColor="Orange" TextColor="White" Clicked="OnSubmitRecipe" />
+            <Button Text="Submit Recipe" 
+                    BackgroundColor="Orange" 
+                    TextColor="White" 
+                    Command="{Binding SubmitRecipeCommand}" 
+                    IsEnabled="{Binding IsSubmitEnabled}" />
+
+            <!-- Back to Edit Ingredients Screen -->
+            <Button Text="Back to Ingredients" 
+                    BackgroundColor="Gray" 
+                    TextColor="White" 
+                    Command="{Binding MoveToEditIngredientCommand}" />
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
